@@ -516,6 +516,7 @@ IMPROVEMENTS
 	- Add ability to add custom spawn sites to spawn menu.
 	- Add Persistent UI button to Vessel Switcher to keep VS and Web Orchestration windows open when F2 UI toggled off.
 	- Add an estimate of the current memory usage to the settings menu when Auto-Quit Memory Threshold is enabled.
+	- Allow a user-set max value to the Time Scaling factor.
 - Game Modes:
 	- Add secret Disco Mode.
 	- Zombie Mode option moved to cheat mode access.
